feat: update readme and simplify components

--- a/src/components/Poker/Poker.css
+++ b/src/components/Poker/Poker.css
@@ -1,17 +1,32 @@
-.GameContainer {
+Header {
+  justify-content: center;
+  text-align: center;
+}
+
+.ContentArea {
   display: flex;
   flex-direction: row;
+  width: 100%;
+  min-height: 60%;
+  border: 1px solid white;
 }
 
-.PlayerContainer {
-  border: 1px solid white;
-  max-width: 80vw;
+.LeftPanel {
+  width: 15%;
 }
 
-.GameStatusContainer {
-  border: 1px solid white;
-  display: flex;
+.MainContentArea {
+  width: 70%;
+  border-left: 1px solid white;
+  border-right: 1px solid white;
+  overflow: auto;
   padding: 20px;
-  flex-direction: column;
-  max-width: 20vw;
+}
+
+.RightPanel {
+  width: 15%;
+}
+
+.Footer {
+  text-align: center;
 }
